--- a/hobbies.html
+++ b/hobbies.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 <div id="container">
-	<a href="https://haanguyen.tk"><img style="width:50px;border-radius:50px;" src="https://scontent.fdad3-2.fna.fbcdn.net/v/t1.0-9/21150277_1326044617493691_5905565582737547369_n.jpg?oh=d709f30b2a3bc9413dab68659aec9409&oe=5A9966BE" alt"home" align="left"></a>
+	<a href="https://haanguyen.tk"><img style="width:50px;border-radius:50px;" src="logo.jpg" alt"home" align="left"></a>
 	     
 	 
 	<div id="content">
@@ -62,12 +62,22 @@
 <p style="font-size:32px; color:#243b55">I'm dynamic girl<br>Enjoy my trips with me</p>
 	</header>
 	<footer>
+		
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
-      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/18056655_1206989566065864_3240107116509460626_n.jpg?oh=c7139cef2b0e41c51a9a0fca8702337c&oe=5A6E12C6" alt="LANGKAWI" width="600" height="400">
+      <img src="bandung.jpg" alt="BANDUNG" width="600" height="500">
     </a>
-    <div class="desc">Langkawi, city of water sport</div>
+    <div class="desc">Bandung-Indonesia Nov 2017</div>
+  </div>
+</div>		
+		
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="#">
+      <img src="langkawi.jpg" alt="LANGKAWI" width="600" height="400">
+    </a>
+    <div class="desc">Langkawi-Malaysia, April 2017 </div>
   </div>
 </div>
 
@@ -75,29 +85,31 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
-      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/15940901_1111043578993797_8697687258955284648_n.jpg?oh=e1bd92bad8acc0ccc3a61a81db586326&oe=5AA300FF" alt="France" width="600" height="400">
+      <img src="france.jpg" alt="France" width="600" height="400">
     </a>
-    <div class="desc">France big culture</div>
+    <div class="desc">France, Dec 2016 </div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
-      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/13091930_918441228254034_7116332144553467973_n.jpg?oh=e9c9bc2510c1c912aff782308c3c4322&oe=5AA70F61" alt="brumo" width="600" height="400">
+      <img src="Brumo.jpg" alt="brumo" width="600" height="400">
     </a>
-    <div class="desc">camping in Brumo Indonesia</div>
+    <div class="desc">Brumo-Indonesia, May 2016</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
-      <img src="https://scontent.fdad3-1.fna.fbcdn.net/v/t1.0-9/12321657_872784622819695_3423911105129064425_n.jpg?oh=8f4f93886bda4ce8b00dbf47e3fe95d1&oe=5AAAB7B7" alt="PENANG" width="600" height="500">
+      <img src="Penang.jpg" alt="PENANG" width="600" height="500">
     </a>
-    <div class="desc">Peaceful Penang</div>
+    <div class="desc">Penang-Malaysia Feb 2016</div>
   </div>
 </div>
+		
+
 
 </footer>
 </body>
