--- a/projects.html
+++ b/projects.html
@@ -32,8 +32,8 @@
  
  var projects = ['dolpin.jpg','"Doing as much as you can for as long as you can"', '"Doing as much as you can for as long as you can"','"Let Me Love You\' is about being brave enough to let a person get close enough to you to teach you how to love yourself, to teach you the importance of loving yourself."','"Listen to your heart more than your head. This motto will get you in trouble, but it\'s never boring."'
  ];
-  
-  return projects
+   index = Math.floor(Math.random() * projects.length);
+  return projects[index]
 }
 
   
